# swerve

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  caster_detailed.blend  swerve frame.dae  swerve wheel.dae  swerve_detailed.blend  swerve_detailed_001.blend
.github/workflows/: ci.yml
Trackless/: Trackless_001.blend  Trackless_002.blend
Trackless/export/: body.dae  body_col.dae
controllers/: CMakeLists.txt
controllers/swerve/: .gitignore  CMakeLists.txt  config.json  main.cpp
controllers/swerve/include/: Controller.hpp  Platform.hpp  Program.hpp  State.hpp
controllers/swerve/include/swerve/base/: Motor.hpp
controllers/swerve/include/util/: Config.hpp  PID.hpp  Profiler.hpp  Telemetry.hpp  XY.hpp  log.hpp
controllers/swerve/src/: Config.cpp  Platform.cpp  State.cpp  main.cpp
controllers/swerve/src/base/: Motor.cpp  Platform.cpp
controllers/swerve/src/util/: Config.cpp  Profiler.cpp
libraries/: CMakeLists.txt
libraries/base/: CMakeLists.txt
libraries/base/include/base/: Motor.hpp  Platform.hpp  SwerveDrive.hpp
libraries/base/src/: Motor.cpp  Platform.cpp  SwerveDrive.cpp
libraries/json/: CMakeLists.txt
libraries/util/: CMakeLists.txt
libraries/util/include/rclcpp/: macros.hpp
libraries/util/include/util/: Config.hpp  Profiler.hpp  Telemetry.hpp  XY.hpp  log.hpp  ramp.hpp  sim_time.hpp
libraries/util/src/: Config.cpp  PID.cpp  Profiler.cpp  Telemetry.cpp  log.cpp  sim_time.cpp
models/: Wheel.dae  base.blend  swerve frame.dae  swerve.blend
models/Trackless/: Trackless_003.blend  Trackless_004.blend  Trackless_005.blend
protos/: Cestar.proto  Drevi.proto  Drive.proto  Roomba.proto  Swerve.proto  Trackless.proto
protos/caster/: Caster.proto  SpringCaster.proto
protos/caster/model/: frame.dae  wheel.dae
protos/drive/: Drive.proto
protos/drive/model/: frame.dae  mount.dae  wheel.dae
worlds/: SwerveWorld.wbt
